# splax

./: .gitignore  LICENSE  README.md  properdocs.yml  pyproject.toml
.github/workflows/: docs.yml  ruff.yml  ty.yml
benchmark/: bench_backward.py  bench_forward.py  suite_report.py
docs/: gen_ref_pages.py  index.md
docs/assets/: gen_logo.py
docs/get-started/: install.md  quickstart.md
docs/user-guide/: batching.md  colmap.md  io.md  rendering.md  training.md  viewer.md
examples/: viewer_demo.py
licenses/: Apache-2.0.txt
scripts/: colmap.py  distill.py  logo_editor.py  logo_splat.py  train_colmap.py  train_lego.py
splax/: __init__.py  _batching.py  _intersect.py  _project.py  _rasterize.py  _render.py  colmap.py  distillation.py  inference.py  io.py  mcmc.py  training.py  utils.py  viewer.py
splax/_project/: __init__.py  _kernels.py  _project.py
splax/_rasterize/: __init__.py  _kernels.py  _rasterize.py
splax/_rasterize/_sort/: _sort.py
tests/: __init__.py  _gsplat_ref.py  conftest.py  test_antialiased.py  test_batched_training.py  test_colmap_init.py  test_colmap_loader.py  test_depth_reg.py  test_distillation.py  test_exposure.py  test_io.py  test_kernel_dispatch.py  test_lego_camera_grad.py  test_lego_regression.py  test_mcmc.py  test_postsync_graphs.py  test_transforms.py  test_viewer.py  test_warp_batch.py  test_warp_grad.py  test_warp_grad_batched.py  test_warp_project.py  test_warp_rasterize.py
