[project]
name = "splax"
dynamic = ["version"]
description = "High-performance vectorized gaussian splatting rendering in JAX"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "licenses/*"]
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.10",
    "imageio",
    "plyfile",
    "matplotlib>=3.11.0",
    "warp-lang>=1.14.0",
    "optax>=0.2.8",
    "dm-pix>=0.4.5",
]

[project.optional-dependencies]
viewer = ["viser>=1.0"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
# gsplat is the external test reference (torch/CUDA). Both are required so the test suite's parity
# checks run
tests = ["pytest", "torch>=2.4", "gsplat>=1.5"]
lint = ["ty==0.0.56"]
docs = [
    "properdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-autorefs>=1.2.0",
]
dist = ["build", "twine"]
dev = ["ruff", { include-group = "tests" }, { include-group = "docs" }, { include-group = "lint" }]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]  # Prevent ruff from reporting conflicting settings with isort
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"benchmark/*" = ["D100", "D103"]
"tests/*" = ["D100", "D103", "D104"]
"examples/*" = ["D100", "D103"]
"tutorials/*" = ["D", "ANN"]
# TODO: Remove once everything is stable and document
"crazyflow/*" = ["D100", "D101", "D102", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.uv]
# gsplat compiles a CUDA extension against torch, so it must build without isolation
no-build-isolation-package = ["gsplat"]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ty.src]
# The Warp-DSL kernel modules are excluded. Their kernel bodies are written in warp's kernel
# language, which warp's type stubs cannot type.
exclude = ["splax/_intersect.py", "splax/_project.py", "splax/_rasterize.py"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    { name = "linux-64", platform = "linux-64" },
    { name = "linux-64-cuda", platform = "linux-64", cuda = "12.9" },
]

[tool.pixi.dependencies]
pip = "*"
ruff = "*"

[tool.pixi.feature.cuda]
platforms = ["linux-64-cuda"]

[tool.pixi.pypi-dependencies]
splax = { path = "./", editable = true }
viser = ">=1.0"

[tool.pixi.feature.docs.dependencies]
python = ">=3.11"
properdocs = ">=1.5.0"
mkdocs-material = ">=9.5.0"

[tool.pixi.feature.docs]
platforms = ["linux-64"]

[tool.pixi.feature.docs.pypi-dependencies]
mkdocstrings = { extras = ["python"], version = ">=0.26.0" }
mkdocs-gen-files = ">=0.5.0"
mkdocs-literate-nav = ">=0.6.0"
mkdocs-section-index = ">=0.3.0"
mkdocs-autorefs = ">=1.2.0"

[tool.pixi.feature.docs.tasks]
docs-build = { cmd = "properdocs build --strict", description = "Build the documentation" }
docs-serve = { cmd = "properdocs serve --livereload", description = "Serve the documentation locally" }

# COLMAP feature: SfM preprocessing tools in a dedicated environment.
#
# The CasPAR GPU bundle adjustment backend is experimental in colmap 4.1 and disabled in every
# official binary. The only way to get it is to compile colmap with -DCASPAR_ENABLED=ON. This
# environment therefore carries the build toolchain and colmap's host dependencies, and the
# colmap-build task compiles colmap 4.1.0 from source into the environment prefix. The pipeline
# tasks depend on colmap-build, which exits immediately while the binary exists and rebuilds
# automatically when the environment was recreated. To force a rebuild, delete 
# .pixi/envs/colmap/bin/colmap.
[tool.pixi.feature.colmap.dependencies]
python = ">=3.11"
# Build toolchain
c-compiler = "*"
cxx-compiler = "*"
cuda-nvcc = "12.9.*"
cuda-cudart-dev = "12.9.*"
cuda-version = "12.9.*"
libcurand-dev = "*"
# Runtime CUDA libs for the onnxruntime-gpu execution provider (ALIKED/LightGlue).
libcufft = "*"
libcublas = "*"
cudnn = "*"
cmake = "*"
ninja = "*"
pkg-config = "*"
git = "*"
# colmap host dependencies
libgl-devel = "*"
libopengl-devel = "*"
libglu = "*"
glew = "*"
libblas = "*"
libcblas = "*"
libboost-devel = "*"
suitesparse = "*"
eigen = "*"
eigen-abi-devel = "*"
freeimage = "*"
glog = "*"
gflags = "*"
ceres-solver = "*"
flann = "*"
sqlite = "*"
vlfeat = "*"
lz4-c = "*"
metis = "*"
openimageio = "*"
fmt = "*"
poselib = "*"
# openblas variant: the mkl variant links MKL 2025 sonames (.so.2) which conflict with the
# current conda-forge mkl 2026 (.so.3).
libfaiss = { version = "*", build = "cuda*openblas*" }
libgomp = "*"

[tool.pixi.feature.colmap]
platforms = ["linux-64-cuda"]

[tool.pixi.feature.colmap.tasks]
colmap-build = { cmd = "bash -lc 'set -euo pipefail; if [ -x \"$CONDA_PREFIX/bin/colmap\" ]; then echo \"colmap already installed, skipping build (delete $CONDA_PREFIX/bin/colmap to force a rebuild)\"; exit 0; fi; src=.pixi-src/colmap; if [ ! -d \"$src\" ]; then git clone --depth 1 --branch 4.1.0 https://github.com/colmap/colmap.git \"$src\"; fi; cmake -S \"$src\" -B \"$src/build\" -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=\"$CONDA_PREFIX\" -DCUDA_ENABLED=ON -DCASPAR_ENABLED=ON -DCMAKE_CUDA_ARCHITECTURES=native -DGUI_ENABLED=OFF -DOPENGL_ENABLED=OFF -DCGAL_ENABLED=OFF -DLSD_ENABLED=OFF -DONNX_ENABLED=ON -DFETCH_ONNX=ON -DFETCH_FAISS=OFF -DFETCH_POSELIB=OFF; cmake --build \"$src/build\" --target install'", description = "Compile colmap 4.1.0 with CasPAR from source into the pixi environment (skipped if already installed)" }
colmap-features = { cmd = "bash -lc 'set -euo pipefail; d=\"$1\"; cd \"$d\"; colmap feature_extractor --database_path ./database.db --image_path ./images --ImageReader.single_camera 1 --ImageReader.camera_model SIMPLE_RADIAL' --", depends-on = ["colmap-build"], description = "Run COLMAP feature extraction in a scene folder" }
colmap-match = { cmd = "bash -lc 'set -euo pipefail; d=\"$1\"; cd \"$d\"; colmap sequential_matcher --database_path ./database.db' --", depends-on = ["colmap-build"], description = "Run COLMAP sequential matching in a scene folder" }
colmap-map = { cmd = "bash -lc 'set -euo pipefail; d=\"$1\"; cd \"$d\"; mkdir -p ./sparse; colmap mapper --database_path ./database.db --image_path ./images --output_path ./sparse --Mapper.ba_local_backend CASPAR --Mapper.ba_global_backend CASPAR' --", depends-on = ["colmap-build"], description = "Run COLMAP mapper in a scene folder" }

# Tests feature: pytest plus gsplat as external reference. gsplat JIT-compiles its
# CUDA extension on first use, so the environment carries the matching CUDA 12.8
# compiler and headers (torch is cu128). Everything stays inside the pixi env.
[tool.pixi.feature.tests.dependencies]
python = ">=3.11"
pytest = "*"
cuda-nvcc = "12.8.*"
cuda-cudart-dev = "12.8.*"
cuda-cccl = "12.8.*"

[tool.pixi.feature.tests]
platforms = ["linux-64-cuda"]

[tool.pixi.feature.tests.activation.env]
# gsplat's JIT build needs an explicit arch. torch 2.10 defaults include arches
TORCH_CUDA_ARCH_LIST = "8.9;12.0"
# conda-forge keeps the CUDA headers under targets/, torch's extension builder
# expects them on the host compiler search path.
CPATH = "$CONDA_PREFIX/targets/x86_64-linux/include"
# Required for scipy.spatial.transform's Rotation / RigidTransform to work with JAX
SCIPY_ARRAY_API = "1"

[tool.pixi.feature.tests.pypi-dependencies]
torch = ">=2.4"
gsplat = ">=1.5"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest -v tests", description = "Run tests" }

# Lint feature: ty type checking of the library.
[tool.pixi.feature.lint.pypi-dependencies]
ty = "==0.0.56"
splax = { path = "./", editable = true, extras = ["viewer"] }

[tool.pixi.feature.lint.tasks]
ty = { cmd = "ty check splax", description = "Type check the library" }
ruff-check = { cmd = "ruff check splax scripts tests", description = "Check formatting and linting" }
ruff-format-check = { cmd = "ruff format --check --diff .", description = "Check code formatting" }

# Dist feature: build the wheel/sdist and publish.
[tool.pixi.feature.dist.pypi-dependencies]
build = "*"
twine = "*"

[tool.pixi.feature.dist.tasks]
build = { cmd = "python -m build && twine check dist/*", description = "Build the sdist and wheel" }
upload_test = { cmd = "twine upload --repository testpypi dist/*", description = "Upload to TestPyPI" }
upload = { cmd = "twine upload dist/*", description = "Upload to PyPI" }

[tool.pixi.environments]
default = { features = ["cuda"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
colmap = { features = ["colmap"], solve-group = "colmap" }
tests = { features = ["cuda", "tests"], solve-group = "default" }
lint = { features = ["lint"], solve-group = "default" }
dist = { features = ["cuda", "dist"], solve-group = "default" }

[tool.setuptools.packages]
find = {include = ["splax*"]}

[tool.setuptools.dynamic]
version = {attr = "splax.__version__"}
